tests/invalid_lex/unclosed_comment.mc
int main() {
    int x;
    /* this comment is not closed
    x = 1;
    return 0;
}
